--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
+    "react-canvas-draw": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
   },
